# llm-temporal-orchestrator

./: .dockerignore  .env  README.md  docker-compose.yml  env.sample  pyproject.toml  run_local.sh  run_tests.sh
api/: Dockerfile  main.py
tests/: test.json  test_e2e.py  test_llms.py
worker/: Dockerfile  activities.py  field_extraction_metrics.py  llms.py  prompts.py  run_worker.py  run_workflow.py  shared.py  utils.py  workflow.py
